--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +18,26 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.links{
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-link {
+  color: #61dafb;
+  text-decoration: none;
+  border: 2px solid #61dafb;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: 0.5s;
 }
+
+.App-link:hover{
+  background-color: #61dafb;
+  color: #282c34;
+  padding: 7px 12px;
+  font-size: calc(11px + 3vmin);
+}
+
+
