--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 }
 
 .App-logo {
+  padding: 20px;
   height: 40vmin;
   pointer-events: none;
 }
@@ -22,6 +23,15 @@
   display: flex;
   flex-direction: row;
   gap: 30px;
+}
+
+h1{
+  padding: 0px;
+  margin: 0px;
+}
+
+h3{
+  margin: 40px;
 }
 
 .App-link {
